# TensorTerm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: app.rs  config.rs  event.rs  logger.rs  main.rs  network.rs  obsidian.rs  scaffold_index.rs  vault.rs
src/llm/: anthropic.rs  mod.rs  openai_compat.rs
src/providers/: arxiv.rs  arxiv_html.rs  hf_papers.rs  hf_search.rs  huggingface.rs  mod.rs  news.rs  semantic_scholar.rs  social.rs
src/ui/: markdown.rs  mod.rs  theme.rs
src/ui/widgets/: article.rs  feed.rs  header.rs  help.rs  highlight.rs  mod.rs  modal.rs  splash.rs  status_bar.rs
